<resources>
    <string name="app_name">Strobe Tuner</string>
    <string name="record">Record</string>
    <string name="back">Back</string>
    <string name="note_name">%1$s %2$d</string>
    <string name="note_freq">%1$.1f Hz</string>
    <string name="cents_err">%1$+d cents</string>
    <string name="mic_permissions_text">Strobe Tuner needs access to your device\'s microphone in order to function.</string>
    <string name="ok">OK</string>
    <string name="no">No, thanks</string>

    <!-- Preferences -->
    <string name="pref_name">com.akwok.strobetuner.prefs</string>
    <string name="ref_A_pref">reference_a</string>
    <string name="noise_rejection_pref">sensitivity_pref</string>
    <string name="note_name_pref">note_name_pref"</string>
    <string name="note_name_default">english</string>
    <string name="dark_mode_pref">dark_mode_pref</string>
    <string name="error_text_pref">error_text_pref</string>
    <string name="tuner_mode_pref">tuner_mode_pref</string>
    <string name="tuner_mode_default">Strobe</string>

    <string name="settings_title">Settings</string>
    <string name="reference_A_title">Reference A frequency</string>
    <string name="reference_A_dialog_title">Reference A frequency (%1$d-%2$d Hz)</string>
    <string name="sync_header">Sync</string>
    <string name="noise_rejection_title">Noise rejection</string>
    <string name="noise_rejection_summary">Increase the detection threshold for sounds</string>
    <string name="note_name_title">Note name convention</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="error_text_title">Show frequency and error text</string>
    <string name="tuner_mode_title">Tuner mode</string>
</resources>